<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_no_network_connection">No Network Connection</string>
    <string name="title_category">Category</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_top_rate">Top Rate</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_popular">Popular</string>
    <string name="title_updated">Updated!</string>
    <string name="number_1">1</string>
</resources>
